# capmind

./: .env.example  .gitignore  .release-please-manifest.json  AGENTS.md  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/: release-please-config.json
.github/workflows/: cli-auto-release.yml  cli-ci.yml  cli-homebrew-tap-sync.yml  cli-release.yml  db-security-check.yml  web-ci.yml
apps/apple/: Package.resolved  Package.swift  README.md
apps/cli/: CHANGELOG.md  Cargo.toml  README.md  package.json
apps/cli/src/: auth.rs  cli.rs  composer_image.rs  doctor.rs  env_loader.rs  error.rs  export_selector.rs  main.rs  memo_export.rs  memo_list_cache_store.rs  pending_submit_cache_store.rs  self_update.rs  session_store.rs  submission.rs  supabase.rs  update.rs
apps/cli/src/tui/: app.rs  bottom_pane.rs  chat_widget.rs  composer.rs  mod.rs  render.rs  theme.rs  types.rs
apps/cli/src/update/: detector.rs  domain.rs  orchestrator.rs  presentation.rs
apps/cli/src/update/backends/: homebrew.rs  mod.rs  standalone.rs
apps/web/: .gitignore  AGENTS.md  README.md  eslint.config.mjs  next.config.mjs  package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx  manifest.json  page.tsx
apps/web/lib/: memos.ts  (+8 more)
docs/: .cli-release.md.swp  cli-release.md
skills/cli-release/: SKILL.md
skills/git-commit/: SKILL.md
skills/git-worktree/: SKILL.md
supabase/migrations/: 20260225143000_harden_memo_rls.sql  20260225220000_memo_conflict_resolution_rpcs.sql  20260226223000_fix_rpc_version_type_casts.sql
supabase/sql/: security_checks.sql
(+129 files in other folders)
