[package]
name = "capmind"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "cap"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
unicode-width = "0.2.0"
